--- a/client/src/Pages/NewBlog/NewBlog.css
+++ b/client/src/Pages/NewBlog/NewBlog.css
@@ -1,25 +1,28 @@
 
-.form-head{
+.form-head1{
     margin: auto;
+    margin-top: 30px;
     padding: 5%;
-    width: 30%;
+    width: 70%;
     background-color: rgb(226,226,226);
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
 }
-.login-head{
+.login-head1{
     padding-bottom: 20px;
-    font-size: 35px;
+    font-size: 2.4rem;
     color: blue;
     font-style:bold;
     
 }
-.Button{
+.Button1{
     width: 100%;
     height: 50px;
     background-image: linear-gradient(rgb(74, 74, 114),rgb(77, 121, 122));
 }
-.p{
+
+.p1{
     text-align: center
 }
-.a{
+.a1{
     color: blue;
 }
