--- a/client/src/Pages/HomePage/Home.css
+++ b/client/src/Pages/HomePage/Home.css
@@ -5,10 +5,14 @@
     margin-right: 20px;
 
 }
-
+body {
+    overflow-x: hidden; /* Hide scrollbars */
+  }
 .Home {
     /* background-image: radial-gradient(circle 311px at 8.6% 27.9%, rgba(62, 147, 252, 0.57) 12.9%, rgba(239, 183, 192, 0.44) 91.2%); */
     background-color: rgb(226, 226, 226);
+    height: 100%;
+    width: 100%;
 }
 
 content {
