--- a/client/src/Pages/NewBlog/NewBlog.css
+++ b/client/src/Pages/NewBlog/NewBlog.css
@@ -10,14 +10,14 @@
 .login-head1{
     padding-bottom: 20px;
     font-size: 2.4rem;
-    color: blue;
+    font-weight: 700;
     font-style:bold;
     
 }
 .Button1{
     width: 100%;
     height: 50px;
-    background-image: linear-gradient(rgb(74, 74, 114),rgb(77, 121, 122));
+    background-image: linear-gradient(rgb(110, 110, 110), rgb(0, 0, 0));
 }
 
 .p1{
