--- a/client/src/Pages/HomePage/Home.css
+++ b/client/src/Pages/HomePage/Home.css
@@ -1,19 +1,22 @@
 .col-md-3 {
     margin-right: 20px;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
-
-
 }
-.col-md-3:hover{
-    border: 1px solid #ccc; 
+
+
+.col-md-3:hover {
+    border: 1px solid #ccc;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 
-    background-color: rgb(226, 226, 226); 
+    background-color: rgb(226, 226, 226);
     cursor: pointer;
 }
+
 body {
-    overflow-x: hidden; /* Hide scrollbars */
-  }
+    overflow-x: hidden;
+    /* Hide scrollbars */
+}
+
 .Home {
     /* background-image: radial-gradient(circle 311px at 8.6% 27.9%, rgba(62, 147, 252, 0.57) 12.9%, rgba(239, 183, 192, 0.44) 91.2%); */
     background-color: rgb(226, 226, 226);
@@ -23,7 +26,6 @@ body {
 
 content {
     margin-bottom: 5px;
-
 }
 
 
@@ -57,10 +59,11 @@ div p {
 
 @media (max-width: 800px) {
     .box {
-      flex-direction: column;
+        flex-direction: column;
     }
-  }
+}
 
+/* Content layout and styles */
 .left-content {
     flex: 0 0 60%;
     overflow-y: auto;
@@ -70,30 +73,94 @@ div p {
     align-items: flex-start;
 }
 
-@media screen and (max-width: 600px) {
-    .list-item {
-      width: 100%;
-      
-    }
+.right-content {
+    flex: 30%;
 }
-@media screen and (max-width: 300px) {
-     .list-item {
-      width: 100%;
-      margin-bottom: 20px;
-    }
-}
-    .left-content h6,
-  .left-content content {
-    font-size: 0.9rem;
-  }
 
-  
+/* User info and list item */
+.list-item{
+    margin-bottom: 10px;
+}
+.user-info,.list-item {
+    display: flex;
+    align-items: flex-start;
+    width:80%;
+}
+
+
 .user-info img {
     width: 30px;
     height: 30px;
     margin-right: 10px;
-    margin-left: 0px;
+    
 }
+
+@media (max-width: 576px) {
+    .user-info img {
+        width: 25px;
+        height: 25px;
+    }
+
+    .user-info p,
+    .list-item h6,
+    .list-item content {
+        font-size: 0.9rem;
+        /* Adjust font size for readability */
+    }
+}
+
+/* Ensure images are responsive */
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+}
+
+
+@media screen and (max-width: 600px) {
+    .list-item {
+        width: 100%;
+
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .list-item .user-info img {
+        width: 20px;
+        /* Smaller images on very small screens */
+        height: 20px;
+    }
+
+    .list-item h6,
+    .list-item content,
+    .list-item p {
+        font-size: 0.8rem;
+        /* Smaller text on very small screens */
+    }
+
+    .p-2 {
+        height: auto;
+        /* Allow height to adjust based on content */
+        padding: 10px;
+        /* Adjust padding for smaller screens */
+    }
+
+    .list-item {
+        margin-bottom: 10px;
+        /* Ensure proper spacing between items */
+    }
+}
+
+
+
+@media screen and (max-width: 300px) {
+    .list-item {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
+
+
+
 
 
 
@@ -102,19 +169,10 @@ div p {
     margin-bottom: 15px;
     margin-top: 5px;
 }
-.user-info {
-    display: flex;
-    margin-bottom: 0px;
-    align-items: flex-start;
-}
-
-.right-content {
-    margin-left: 20px;
-    flex: 30%;
-    right: 0;
 
 
-}
+
+
 
 .topic {
     display: flex;
@@ -132,4 +190,13 @@ div p {
     display: block;
     width: auto;
     text-align: left;
+}
+
+.button:hover {
+    border: 1px solid #ccc;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+
+    background-color: green;
+    cursor: pointer;
+
 }
