--- a/client/src/Pages/HomePage/Home.css
+++ b/client/src/Pages/HomePage/Home.css
@@ -110,7 +110,7 @@ div p {
     border: 1px solid #ccc;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
     color: white;
-    background-color: green;
+    background-color: black;
     cursor: pointer;
 
 }
